--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ PORT=3001
 IMAGES_PATH=/images
 REFRESH_TOKEN_SECRET=W-0938R4U781523#$gvb_mkWAE3R4][{W=+
 ACCESS_TOKEN_SECRET=A[DESPLOFKIRJU5HTYJI4783490I-Q2P[*&^%$#3ERFGWHJQIKOE]]
+ORIGIN=http://localhost:5174
+APP_URL=http://localhost:3001
