--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.2.2",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.4.15",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/websockets": "^10.4.15",
     "@prisma/client": "^6.2.1",
     "bcryptjs": "^2.4.3",
@@ -36,10 +38,15 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "graphql": "^16.10.0",
+    "graphql-redis-subscriptions": "^2.7.0",
+    "graphql-upload": "^14.0.0",
+    "ioredis": "^5.4.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -49,10 +56,13 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.17",
+    "@types/graphql-upload": "^17.0.0",
     "@types/jest": "^29.5.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.3.1",
     "@types/socket.io": "^3.0.1",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
